# kafka-topic-auditor

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
auditor/: cli.py  client.py  models.py  report.py
docs/: architecture.md  interview-notes.md  production-readiness.md  runbook.md  security-notes.md
docs/adr/: 0001-core-design.md  0001-main-design-choice.md
tests/: test_report.py
