[project]
name = "kafka-topic-auditor"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.7", "rich>=13.7"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
