[project]
name = "kafka-topic-auditor"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["click>=8.1.8", "pydantic>=2.7", "rich>=15.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
